--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be My Valentine Baby?</title>
+    <title>Can I be yours?</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Icon -->
     <link rel="Icon" href="images/heart.gif" type="image/gif">
@@ -14,7 +14,7 @@
         <!-- Step 1 -->
         <div class="step active" id="step1">
             <img src="images/AshSnow.gif" alt="Cute Cat" class="cat-img">
-            <h1>Will you be my Valentine? 💝</h1>
+            <h1>May I be your boyfriend? 💝</h1>
             <div class="buttons">
                 <button class="btn btn-yes" onclick="goToStep2()">Yes</button>
                 <button class="btn btn-no" onmouseover="moveButton(this)" onclick="moveButton(this)">No</button>
@@ -24,9 +24,9 @@
             <!-- Step 2 -->
         <div class="step" id="step2">
                 <img src="images/are u sure.gif" alt="Cute Cat in Love" class="cat-img">
-                <h1>Are you sure you want to be my valentine? 😼</h1>
+                <h1>I want to be the reason you feel safe, loved, and appreciated. 💓</h1>
                 <div class="buttons">
-                <button class="btn btn-yes" onclick="goToStep3()">Yes, 100% Sure</button>
+                <button class="btn btn-yes" onclick="goToStep3()">I mean this</button>
                 <button class="btn btn-no" onmouseover="moveButton(this)" onclick="moveButton(this)">Let me think...</button>
             </div>
         </div>
@@ -34,19 +34,19 @@
         <!-- Step 3 -->
         <div class="step" id="step3">
             <img src="images/Hugging.gif" alt="Cute Cat in Love" class="cat-img">
-            <h1>Promise me you'll always be my valentine ❤️</h1>
+            <h1>And for as long as I'm here, you'll always have someone who cares for you deeply ❤️</h1>
             <div class="buttons">
-                <button class="btn btn-yes" onclick="finalStep()">Yes, I Promise</button>
+                <button class="btn btn-yes" onclick="finalStep()">I always will</button>
             </div>
         </div>
 
             <div class="final-message">
                 <img src="images/kisses.gif" alt="Cute Cat in Love" class="cat-img">
-                <p>Yaaaahoooooo, You made valentine so special for me, I Love You! 🥰</p>
-                <p style="margin-top: 15px;">You can text me by clicking the button below. I'm waiting for you, Baby ko!</p>
+                <p>So I hope that the answer is yes because I want to be able to call you every lovely word I could possibly think of. Cariño, my baby, and the list goes on 🥰</p>
+                <p style="margin-top: 15px;">You can text me your answer by clicking the button below.</p>
             </div>
 
-            <a href="https://www.facebook.com/share/1BfyNHAs2o/?mibextid=wwXIfr" class="facebook-btn" target="_blank">
+            <a href="tel:+1-555-555-5555">+1 (650) 542-6855</a>" class="text-btn" target="_blank">
                 Text me here 💌
         </a>        
     </div>
@@ -57,4 +57,5 @@
             
 
         
+
 
