--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p style="margin-top: 15px;">You can text me your answer by clicking the button below.</p>
             </div>
 
-            <a href="tel:+1-555-555-5555">+1 (650) 542-6855</a>" class="text-btn" target="_blank">
+            <a href="tel:+6505426855" class="facebook-btn">
                 Text me here 💌
         </a>        
     </div>
@@ -57,5 +57,6 @@
             
 
         
+
 
 
