--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Step 3 -->
         <div class="step" id="step3">
             <img src="images/Hugging.gif" alt="Cute Cat in Love" class="cat-img">
-            <h1>And for as long as I'm here, you'll always have someone who cares for you deeply ❤️</h1>
+            <h1>For as long as I'm around, you'll always have someone who cares for you deeply ❤️</h1>
             <div class="buttons">
                 <button class="btn btn-yes" onclick="finalStep()">I always will</button>
             </div>
@@ -57,6 +57,7 @@
             
 
         
+
 
 
 
